--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.8",
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.16",
+        "tailwindcss": "^3.1.8",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.7",
+        "flowbite": "^1.5.3",
+        "sass": "^1.54.9"
     }
 }
