--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@awcodes/alpine-floating-ui": "^3.4.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.7",
+        "alpinejs": "^3.10.3",
         "autoprefixer": "^10.4.8",
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.6.0",
@@ -14,8 +18,6 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "@tailwindcss/forms": "^0.5.3",
-        "@tailwindcss/typography": "^0.5.7",
         "flowbite": "^1.5.3",
         "sass": "^1.54.9"
     }
