Auth (login / forgot password / recover password) pages

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.10"
+        "livewire/livewire": "^2.10",
+        "phpsa/filament-password-reveal": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
