--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
         "flowbite": "^1.5.3",
         "sass": "^1.54.9"
     }
