--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
         "flowbite": "^1.5.3",
+        "jquery": "^3.6.1",
+        "magnific-popup": "^1.1.0",
         "sass": "^1.54.9"
     }
 }
