--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
-        "phpsa/filament-password-reveal": "^1.1"
+        "phpsa/filament-password-reveal": "^1.1",
+        "spatie/laravel-activitylog": "^4.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
