Add heroku configuration

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,10 @@
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
+        "post-install-cmd": [
+            "@php artisan migrate --force",
+            "@php artisan db:seed --force"
+        ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
