--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "devaslanphp/filament-avatar": "^1.0",
         "filament/forms": "^2.15",
         "filament/notifications": "^2.15",
         "guzzlehttp/guzzle": "^7.2",
