--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
         "phpsa/filament-password-reveal": "^1.1",
+        "psr/simple-cache": "1.0",
+        "pxlrbt/filament-excel": "^1.1",
         "spatie/laravel-activitylog": "^4.5",
         "spatie/laravel-permission": "^5.5"
     },
