--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "invaders-xx/filament-kanban-board": "^0.2.6",
         "larabug/larabug": "^2.5",
-        "laravel/framework": "^9.19",
+        "laravel/framework": "^9.19|^10.0",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
